- Added support for persistent page state (Qiang)
- Added CDbCommandBuilder::createSearchCondition (Qiang)
- Added Hangman game demo (Qiang)
- Added support to allow controller classes to be organized in subdirectories (Qiang)
- Fixed issue #20: CBasePager throws undefined constant error (Qiang)
- Fixed an issue that affects pager's parameter initialization order (Qiang)
- Fixed a bug in determining FK relations in MySQL (Qiang)
- Added CHtml::ajaxSubmitButton (Qiang)
- Added CHtmlPurifier (Qiang)
- Added CMarkdown (Qiang)
- Added CDbConnection.charset (Qiang)

Version 1.0b October 24, 2008
-----------------------------
- Added CWebServiceAction.serviceOptions (Qiang)
- Added CAPTCHA to application generated by yiic webapp (Qiang)
- Enabled CHtml::activeXXX to deal with multirow input (Qiang)
- Fixed issue #7: typo in CWebUser.id implementation (Qiang)
- Changed the default behavior of CWebServiceAction to serve WSDL (Qiang)
- Removed getIsNewRecord and setIsNewRecord methods from CActiveRecord.
  Added CActiveRecord.isNewRecord property. (Qiang)
- Implemented view renderer feature so that customized view template may be used. (Qiang)
- Added CFlexWidget (Qiang)
- Added CWebServiceAction.classMap (Qiang)
- Added Phone Book demo (Qiang)
- Removed UserController from yiic webapp and merged it to SiteController (Qiang)
- Added support to allow creating customized yiic shell commands (Qiang)
- Refactored auth framework (Qiang)
- Fixed a bug that prevented CActiveRecord from taking attributes not defined in table (Qiang)
- Changed CActiveRecord.setAttributes to allow explicitly specify safe attributes (Qiang)
- Implemented hierarchical role-based access control (Qiang)
- Added CVarDumper (Qiang)
- Added CDateParser (Qiang)
- Added CTypeValidator (Qiang)
- Added CViewRenderer and CPradoViewRenderer (Qiang)
- Changed Yii::t() and added a category parameter as its first parameter (Qiang)

Version 1.0a October 5, 2008
----------------------------
Initial release