@@ -23,6 +23,7 @@ Version 1.0rc to be released
 - Added CHtmlPurifier (Qiang)
 - Added CMarkdown (Qiang)
 - Added CDbConnection.charset (Qiang)
+- Fixed a bug in CDbHttpSession that makes it not functional (Qiang)
 
 Version 1.0b October 24, 2008
 -----------------------------
